--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel-React-Twitter
 APP_ENV=local
-APP_KEY=base64:PVY2eq9BjCDRq0ze7MSaV568XZv0y8KLaRosyjHEc8I=
+APP_KEY=AHGyiNF1RNXn1gegyYINTOLWZEvTSif4Ti6v5IFmHAc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
