--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel-React-Twitter
 APP_ENV=local
 APP_KEY=AHGyiNF1RNXn1gegyYINTOLWZEvTSif4Ti6v5IFmHAc=
 APP_DEBUG=true
-APP_URL=https://laravel-react-twitter-app.herokuapp.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
